# TraderAI

./: .env.example  .gitignore  README.md  TraderAI-Dashboard.command  pyproject.toml
.github/workflows/: ci.yml
TraderAI.app/Contents/: Info.plist
TraderAI.app/Contents/MacOS/: TraderAI
examples/: cron_check.sh  seed_accounts.py  seed_portfolio.py
tests/: test_accounts.py  test_alerts.py  test_analysis.py  test_bitflyer.py  test_fire.py  test_fx.py  test_graph.py  test_importers.py  test_journal.py  test_knowledge.py  test_portfolio.py  test_rebalance.py  test_report.py  test_risk.py  test_screener.py  test_simulation.py  test_stress.py  test_symbols.py  test_tax.py  test_taxreturn.py  test_watchlist.py  test_web.py
traderai/: __init__.py  accounts.py  agent.py  alerts.py  analysis.py  cli.py  config.py  fx.py  graph.py  importers.py  journal.py  knowledge.py  market.py  portfolio.py  rebalance.py  report.py  risk.py  screener.py  simulation.py  stress.py  symbols.py  tax.py  taxreturn.py  watchlist.py  web.py
traderai/brokers/: __init__.py  base.py  bitflyer.py  paper.py  rakuten.py
